--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -8,11 +8,21 @@
 
 window#waybar {
     /* match with alacritty background_opacity */
-    background: rgba(0, 0, 0, 0.7);
-    border-bottom: 2px solid rgba(100, 114, 125, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
+    /* border-bottom: 2px solid rgba(100, 114, 125, 0.7); */
     color: white;
-    transition-property: background, background-color;
-    transition-duration: .5s;
+    /* transition-property: background, background-color; */
+    /* transition-duration: .2s; */
+}
+
+window#waybar.empty {
+    background-color: transparent;
+}
+
+window#waybar.calibre,
+window#waybar.firefox {
+    /* Arc-Dark theme background */
+    background-color: rgba(56, 60, 74, 0.999);
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
@@ -37,7 +47,16 @@ window#waybar {
     border-bottom: 2px solid white;
 }
 
-#clock, #battery, #backlight, #network, #pulseaudio, #tray, #mode, #idle_inhibitor {
+#clock,
+#battery,
+#cpu,
+#memory,
+#backlight,
+#network,
+#pulseaudio,
+#tray,
+#mode,
+#idle_inhibitor {
     padding: 4px 8px;
 }
 
