--- a/firefox/chrome/userChrome.css
+++ b/firefox/chrome/userChrome.css
@@ -3,11 +3,11 @@
   visibility: collapse !important;
 }
 /* Hide main tabs toolbar */
-#main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar > .toolbar-items {
+#main-window[tabsintitlebar="true"]:not([extradragspace="true"]):not([privatebrowsingmode="temporary"]) #TabsToolbar > .toolbar-items {
     opacity: 0;
     pointer-events: none;
 }
-#main-window:not([tabsintitlebar="true"]) #TabsToolbar {
+#main-window:not([tabsintitlebar="true"]):not([privatebrowsingmode="temporary"]) #TabsToolbar {
     visibility: collapse !important;
 }
 /* Sidebar min and max width removal */
