--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,20 +1,106 @@
 * {
-    font-family: 'Liberation Mono', 'Font Awesome 5 Free', 'Font Awesome 5 Brands', monospace;
+    font-family: 'Liberation Mono', 'Font Awesome 6 Free', 'Font Awesome 6 Brands', monospace;
     font-size: 13px;
 }
 
+@define-color inactive_module_color #a9a9a9;
+
 window#waybar {
-    /* match with alacritty background_opacity */
-    background-color: rgba(0, 0, 0, 0.7);
-    /* border-bottom: 2px solid rgba(100, 114, 125, 0.7); */
-    color: white;
-    /* transition-property: background, background-color; */
-    /* transition-duration: .2s; */
+    background-color: rgba(43, 48, 59, 0.8);
+    border-color: rgba(100, 114, 125, 0.5);
+    border-style: solid;
+    color: #ffffff;
+    transition-property: background-color;
+    transition-duration: .5s;
+}
+/*
+window#waybar:not(.bottom):not(.left):not(.right) {
+    border-bottom-width: 2px;
 }
 
+window#waybar.bottom {
+    border-top-width: 2px;
+}
+*/
 window#waybar.hidden {
     opacity: 0.2;
 }
+
+button {
+    /* reset all builtin/theme styles */
+    all: unset;
+    /* Restore some properties */
+    min-height: 24px;
+    min-width: 16px;
+    padding: 0 10px;
+    transition: all 200ms ease-out;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+    background: inherit;
+}
+
+window#waybar:not(.bottom):not(.left):not(.right) button:hover{
+    box-shadow: inset 0 -2px;
+}
+
+window#waybar.bottom button:hover {
+    box-shadow: inset 0 2px;
+}
+
+/*
+ * Common module rules
+ */
+
+.modules-left > widget > label,
+.modules-center > widget > label,
+.modules-right > widget > label {
+    color: inherit;
+    margin: 0;
+    padding: 0 7px;
+}
+
+.modules-left > widget > box,
+.modules-center > widget > box,
+.modules-right > widget > box {
+    color: inherit;
+    margin: 0;
+    padding: 0;
+}
+
+/* If the leftmost module is a box, omit left margin and padding */
+.modules-left > widget:first-child > box {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+/* If the rightmost module is a box, omit right margin and padding */
+.modules-right > widget:last-child > box {
+    margin-right: 0;
+    padding-right: 0;
+}
+
+/*
+ * Uncomment to draw module underlines
+ */
+/*
+window#waybar:not(.bottom):not(.left):not(.right) .modules-left > widget > label,
+window#waybar:not(.bottom):not(.left):not(.right) .modules-center > widget > label,
+window#waybar:not(.bottom):not(.left):not(.right) .modules-right > widget > label {
+    box-shadow: inset 0 -2px;
+}
+
+window#waybar.bottom .modules-left > widget > label,
+window#waybar.bottom .modules-center > widget > label,
+window#waybar.bottom .modules-right > widget > label {
+    box-shadow: inset 0 2px;
+}
+*/
+
+/*
+ * Workspace state and focused window rules
+ */
 
 window#waybar.mode-invisible {
     opacity: 0;
@@ -24,15 +110,10 @@ window#waybar.mode-invisible.empty {
     opacity: 1;
 }
 
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-*/
-
-window#waybar.firefox {
+window#waybar.firefox,
+window#waybar.org\.mozilla\.firefox {
     /* Arc-Dark theme */
-    background-color: #565965;
+    background-color: #383c4a;
 }
 
 window#waybar.calibre-gui,
@@ -41,27 +122,54 @@ window#waybar.thunderbird {
     background-color: #2f343f;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-#workspaces button {
-    padding: 0 8px;
-    background-color: transparent;
-    color: inherit;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -2px transparent;
-    /* Avoid rounded borders under each workspace name */
-    border: none;
-    border-radius: 0;
+window#waybar.alacritty,
+window#waybar.foot {
+    /* match with the terminal background opacity */
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+/*
+window#waybar.empty {
+    background-color: transparent;
+}
+
+window#waybar.solo {
+    background-color: #FFFFFF;
+}
+
+window#waybar.termite {
+    background-color: #3F3F3F;
+}
+
+window#waybar.chromium {
+    background-color: #000000;
+    border: none;
+}
+*/
+
+/*
+ * Styles and colors for important states
+ */
+
+#workspaces button {
+    background-color: transparent;
+    color: #ffffff;
+}
+
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -2px white;
 }
 
 #workspaces button.focused {
-    background: rgba(100, 114, 125, 0.7);
-    box-shadow: inset 0 -2px white;
+    background: rgba(100, 114, 125, 0.5);
+}
+
+window#waybar:not(.bottom):not(.left):not(.right) #workspaces button.focused {
+    box-shadow: inset 0 -2px;
+}
+
+window#waybar.bottom #workspaces button.focused {
+    box-shadow: inset 0 2px;
 }
 
 #workspaces button.urgent {
@@ -69,68 +177,35 @@ window#waybar.thunderbird {
 }
 
 #mode {
-    background-color: red;
-    box-shadow: inset 0 -2px white;
+    background-color: #64727D;
 }
 
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#custom-media,
-#custom-layout,
-#tray,
-#mode,
-#idle_inhibitor,
-#mpd {
-    padding: 4px;
-    margin: 0 4px;
+window#waybar:not(.bottom):not(.left):not(.right) #mode {
+    box-shadow: inset 0 -2px;
 }
 
-#custom-start {
-    padding: 4px 8px;
+window#waybar.bottom #mode {
+    box-shadow: inset 0 2px;
 }
 
-#custom-platform_profile {
-    padding: 4px;
-}
-#window,
-#workspaces {
-    margin: 0 4px;
+#image {
+    margin: 0;
+    padding: 0 10px;
 }
 
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-#battery.charging {
-    background-color: rgba(38, 166, 91, 0.2);
-}
-
-#battery.warning:not(.charging) {
-    background: rgba(245, 60, 60, 0.2);
+#battery.charging, #battery.plugged {
+    color: #32cd32;
 }
 
 @keyframes blink {
     to {
         background-color: #ffffff;
-        color: black;
+        color: #000000;
     }
 }
 
 #battery.critical:not(.charging) {
-    background: rgba(245, 60, 60, 0.5);
+    color: #f53c3c;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -138,24 +213,140 @@ window#waybar.thunderbird {
     animation-direction: alternate;
 }
 
-#network {
-    background: rgba(41, 128, 185, 0.2);
+#network.disconnected,
+#pulseaudio.muted,
+#wireplumber.muted {
+    color: @inactive_module_color;
 }
 
-#network.disconnected {
-    background: rgba(245, 60, 60, 0.5);
-}
-
-#pulseaudio.muted {
-    background: #90b1b1;
-    color: #2a5c45;
+#tray {
+    padding: 0 5px;
 }
 
 #tray > .passive {
     -gtk-icon-effect: dim;
 }
 
+@keyframes needs-attention {
+    to {
+        background-color: rgba(235, 77, 75, 0.5);
+    }
+}
+
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    box-shadow: inset 0 -3px #eb4d4b;
+    animation-name: needs-attention;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    background-color: transparent;
+}
+
+#idle_inhibitor {
+    color: @inactive_module_color;
+}
+
+#idle_inhibitor.activated {
+    color: inherit;
+}
+
+#mpd.disconnected,
+#mpd.paused,
+#mpd.stopped {
+    color: @inactive_module_color;
+}
+
+#cpu.high,
+#temperature.critical {
+    color: #eb4d4b;
+}
+
+#language {
+    min-width: 16px;
+}
+
+#keyboard-state {
+    min-width: 16px;
+}
+
+#keyboard-state > label {
+    padding: 0 5px;
+}
+
+#keyboard-state > label.locked {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad.empty {
+	background-color: transparent;
+}
+
+/*
+ * Less important colors.
+ * Uncomment this if you want more colorful bar
+ */
+
+#cpu {
+    color: #2ecc71;
+}
+
+#memory {
+    color: #ba55d3;
+}
+
+#disk {
+    color: #964B00;
+}
+
+#backlight {
+    color: #90b1b1;
+}
+
+#network {
+    color: #00bfff;
+}
+
+#pulseaudio,
+#wireplumber {
+    color: #f1c40f;
+}
+
+#temperature {
+    color: #f0932b;
+}
+
+#mpd {
+    color: #66cc99;
+}
+
+#mpd.paused {
+    color: #51a37a;
+}
+
+#language {
+    color: #00b093;
+}
+
+#keyboard-state {
+    color: #97e1ad;
+}
+
+#custom-platform-profile.performance,
+#power-profiles-daemon.performance {
+    color: #f53c3c;
+}
+
+#custom-platform-profile.balanced,
+#power-profiles-daemon.balanced {
+    color: #00bfff;
+}
+
+#custom-platform-profile.low-power,
+#power-profiles-daemon.power-saver {
+    color: #2ecc71;
 }
